<resources>
    <string name="app_name">Item Rental</string>

    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="about">About</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="item_name">Item Name</string>
    <string name="lending_price">Lending Price</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="laptop">Laptop</string>
    <string name="_12">$ 12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="lore_impsam">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="search">Search</string>
    <string name="my_items">My Items</string>
    <string name="account">Account</string>
    <string name="distance">0.7 km</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="unknown_dis">Unknown Distance</string>
    <string name="my_requests">My Requests</string>
    <string name="pending">Pending</string>
    <string name="complete">complete</string>
    <string name="vote">Vote</string>
    <string name="request">Request</string>
    <string name="orders">Orders</string>
    <string-array name="order_status">
        <item>Pending</item>
        <item>Lend</item>
        <item>Returned</item>
    </string-array>
</resources>
